Fix chin gap

--- a/src/index.css
+++ b/src/index.css
@@ -89,12 +89,12 @@ body {
   overflow: hidden;
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 #root {
   min-height: 100svh;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   overflow: hidden;
